--- a/HomeAccounting.CompositionRoot/HomeAccounting.CompositionRoot.csproj
+++ b/HomeAccounting.CompositionRoot/HomeAccounting.CompositionRoot.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HomeAccounting.BusinessLogic.Contract\HomeAccounting.BusinessLogic.Contract.csproj" />
+    <ProjectReference Include="..\HomeAccounting.BusinessLogic\HomeAccounting.BusinessLogic.csproj" />
     <ProjectReference Include="..\HomeAccounting.DataSource.Contract\HomeAccounting.DataSource.Contract.csproj" />
+    <ProjectReference Include="..\HomeAccounting.DataSource\HomeAccounting.DataSource.csproj" />
   </ItemGroup>
 
 </Project>
